He cambiado el botón de registro que no había sido añadido

--- a/LenguajeDeMarcas/EjercicioLMSG_PaginaUtad/EventoProgramacionUtad.html
+++ b/LenguajeDeMarcas/EjercicioLMSG_PaginaUtad/EventoProgramacionUtad.html
@@ -78,9 +78,11 @@
                 <label class="confirmacion"><input type="radio" id="asistir" name="asistir" valur="no" required> No</label>
 
                 <label for="sessions">Selecciona las charlas/talleres:</label>
+
                 <label><input type="checkbox" id="ia" name="sessions" value="ia">Introducción a la IA</label>
                 <label><input type="checkbox" id="web_modernas" name="sessions" value="web_modernas">Desarrollo de aplicaciones web modernas</label>
-                <label><input type="checkbox" id="seguridad" name="sessions" valur="seguridad">Seguridad en la programación</label>
+                <label><input type="checkbox" id="seguridad" name="sessions" valur="seguridad">Seguridad en la programación</label> 
+                <button type="submit">Registrar</button>
             </form>
         </section>
     </main>
